-Convenience +Stability